refactor: 루틴 관련 fixture 패턴 리팩토링
- 커스텀 루틴 빌더로 감사 정보(audit fields) 관리 일관화
- 테스트 데이터에 명확한 날짜/시간 사용
- 클래스 이름 명확하게 개선
- AssertJ 사용법 통일